Fixed css spacing issues.

--- a/Sports_Altitude_Dashboard/static/css/style.css
+++ b/Sports_Altitude_Dashboard/static/css/style.css
@@ -62,3 +62,7 @@ h1 {
 a:hover {
   background-color: white;
 }
+
+.jumbotron {
+  margin: 0 auto 35px auto;
+}
